tests/bad/3.sm
# Missing stuff...
(module Main imports (StdLib))

(vars (x))

(functions ())